# onnx-playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  benchmark_results.txt  pyproject.toml
onnx-create/: pyproject.toml
onnx-create/onnx_playground/: 01_train_scikit_learn_model.py  02_serialize_to_onnx.py  03_inference_via_onnx.py  config.py  test_inference_scikit_learn.py  test_inference_via_onnx.py
onnx-llm-serve/: Cargo.toml
onnx-llm-serve/src/: main.rs
onnx-serve/: Cargo.toml
onnx-serve/src/: main.rs
onnx_playground/: 01_train_scikit_learn_model.py  02_serialize_to_onnx.py  03_inference_via_onnx.py  config.py
scripts/: benchmark.sh
src/: 01_train_scikit_learn_model.py  02_serialize_to_onnx.py
