[project]
name = "onnx-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.2",
    "onnxruntime>=1.19.2",
    "skl2onnx>=1.17.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]

[tool.uv.workspace]
members = ["example-packaged-app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
